assets/css/custom.css
body {
    background-color: #0a0c1f;
    color: #fff;
    font-size: 0.95em;
    overflow: hidden;
}

h1 {
    /* font-size: 2em; */
}
a {
    color: #fff;
    text-decoration: none;
}
a:hover {
    color: #f9205a;
    text-decoration: none;
}
a.highlight1 {
    color: #f9205a;
}
a.highlight1:hover {
    color: #f9205a;
    text-decoration: underline;
}
a.highlight2 {
    color: #22d3ee;
}
a.highlight2:hover {
    color: #22d3ee;
    text-decoration: underline;
}

svg {
    font-size: 1.3rem;
}
svg.fa-house {
    font-size: 1.1rem;
}

.rounded {
    border-radius: 0.5rem !important;
}

.btn {
    color: #fff;
    /* font-size: 0.92em; */
}
.btn:hover {
    color: #fff;
}
.accordion-button, .btn:focus {
    outline: none;
    box-shadow: none;
}

.form-control {
    color: #fff;
    background-color: #232536;
    border-color: #162033;
    font-size: 0.95em;
    padding: 0.3rem 0.5rem;
}
button, button:focus:not(.focus-visible) {
    outline: none;
    box-shadow: none;
}
.form-control:focus {
    color: #fff;
    background-color: #0a0c1f;
    border-color: #22d3ee;
    box-shadow: inset 0 1px 1px rgba(101,210,233, 0.075), 0 0 8px rgba(101,210,233, 0.6);
    /* outline: none; */
}

.color-custom1 {
    color: #f9205a;
}
.bgcolor-custom1 {
    color: #f9205a;
}
.text-custom1 {
    color: #f9205a;
}
a.text-custom1:hover {
    color: #f9205a;
}
.btn-custom1 {
    color: #fff;
    background-color: #f9205a;
    border-color: #d9003a;
}
.btn-custom1:hover {
    color: #fff;
    background-color: #f9205a;
    border-color: #d9003a;
}
.btn-outline-custom1 {
    border-color: #f9205a;
}
.btn-outline-custom1:hover {
    color: #fff;
    background-color: #f9205a;
    border-color: #d9003a;
}

.color-custom2 {
    color: #22d3ee;
}
.bgcolor-custom2 {
    color: #22d3ee;
}
.text-custom2 {
    color: #22d3ee;
}
a.text-custom2:hover {
    color: #22d3ee;
}
.btn-custom2 {
    color: #fff;
    background-color: #22d3ee;
    border-color: #0ea5e9;
}
.btn-custom2:hover {
    color: #fff;
    background-color: #22d3ee;
    border-color: #0ea5e9;
}
.btn-outline-custom2 {
    border-color: #22d3ee;
}
.btn-outline-custom2:hover {
    color: #fff;
    background-color: #22d3ee;
    border-color: #0ea5e9;
}

.color-custom3 {
    color: #facc15;
}
.bgcolor-custom3 {
    color: #facc15;
}
.text-custom3 {
    color: #facc15;
}
a.text-custom3:hover {
    color: #facc15;
}
.btn-custom3 {
    color: #fff;
    background-color: #facc15;
    border-color: #f59e0b;
}
.btn-custom3:hover {
    color: #fff;
    background-color: #facc15;
    border-color: #f59e0b;
}
.btn-outline-custom3 {
    border-color: #facc15;
}
.btn-outline-custom3:hover {
    color: #fff;
    background-color: #facc15;
    border-color: #f59e0b;
}


#main-content {
    background-color: #0a0c1f;
    overflow-y: auto;
    padding-bottom: 100px;
    padding-top: 10px;
}



#topbar {
    border-bottom: 2px solid #141729;
}
#topbar input {
    padding-left: 40px;
}
#topbar .go-search {
    color: #22d3ee;
    position: absolute;
    padding: 5px 0px 5px 10px;
    z-index: 100;
}
#topbar .reset-search-term {
    margin-left: -25px;
    padding-top: 5px;
    z-index: 100;
}
#topbar .reset-search-term {
    color: #fff;
}
#topbar .reset-search-term:hover {
    color: #ddd;
}


#tagbar {
    background-color: #0a0c1f;
    border-right: 2px solid #141729;
    overflow-y: auto;
    overflow-x: hidden;
    padding-bottom: 100px;
    padding-left: 5px;
    padding-right: 5px;
    /* padding-top: 10px; */
    width: 250px;
}
#tagbar nav a {
    font-size: 2em;
}
#tagbar nav a:hover {
    text-decoration: none;
}
#tagbar ul {
    list-style-type: none;
}
#tagbar li {
    /* border-left: 3px solid transparent; */
    margin-bottom: 0px;

    /* padding: 2px 10px 2px 10px; */
}
#tagbar .list-group-item {
    background-color: transparent;
    border: 0px;
    font-size: 0.95em;
    padding: 6px;
}
/* #tagbar li.active {
    background-color: #1E293B;
} */
#tagbar li:hover {
    background-color: #232536;
    /* border-left: 3px solid #f9205a; */
}
#tagbar li:hover .hashtag {
    color: #22d3ee;
    /* border-left: 3px solid #f9205a; */
}
#tagbar .badge {
    color: #0a0c1f;
    background-color: #FFF;
}
#tagbar li:hover .badge {
    background-color: #22d3ee;
    color: #fff;
    /* border-left: 3px solid #f9205a; */
}

#mobile-menu .lnk-close:hover {
    color: #ddd;
}

/* X-Small	None  <576px
Small	sm    ≥576px
Medium	md    ≥768px
Large	lg    ≥992px
Extra large	xl  ≥1200px
Extra extra large xxl  ≥1400px */
/*
$grid-breakpoints: (
  xs: 0,
  sm: 576px,
  md: 768px,
  lg: 992px,
  xl: 1200px,
  xxl: 1400px
); */

.show {
    /* border: 5px solid #f00; */
    visibility: visible !important;
    /* display: block; */
    transform: translateX(0) !important;
}

@media all and (max-width: 991px) {

	/* .offcanvas-header{ display:block; } */

	#tagbar {
		border-radius: 0;
		display: block;
        left: 0;
		height: 100%;
		overflow-x: hidden;
		overflow-y: scroll;
		position: fixed;
        top: 0;
		transform: translateX(-100%);
		transition: visibility .3s ease-in-out, transform .3s ease-in-out;
		visibility: hidden;
        width: 50%;
		z-index: 1200;
	}

	/* .mobile-offcanvas .container, .mobile-offcanvas .container-fluid{
		display: block;
	} */
}

@media all and (max-width: 767px) {

	/* .offcanvas-header{ display:block; } */

	#tagbar {
		border-radius: 0;
		display: block;
        left: 0;
		height: 100%;
		overflow-x: hidden;
		overflow-y: scroll;
		position: fixed;
        top: 0;
		transform: translateX(-100%);
		transition: visibility .3s ease-in-out, transform .3s ease-in-out;
		visibility: hidden;
        width: 80%;
		z-index: 1200;
	}

	/* .mobile-offcanvas .container, .mobile-offcanvas .container-fluid{
		display: block;
	} */
}





#contributors img {
    /* border-radius: 50px; */
}



#tool-details .link-close svg {
    font-size: 1.5rem !important;
}
#tool-details .link-close:hover {
    color: #ddd;
}
#tool-details .tool-link:hover {
    text-decoration: underline;
}



.tool-card .card, .tool-card .card-body, .tool-card .list-group-item {
    background-color: #141729;
}
.tool-card .card {
    border: 2px solid #141729;
    transition: transform .2s;
}
.tool-card .card:hover {
    transform: scale(1.03);
    /* transform: translate(0px, -10px); */
}
.tool-card .card-body {
    margin-bottom: 0px;
    margin-top: 0px;
}
.tool-card .card-footer {
    background-color: #0a0c1f;
}
.tool-card .tool-name {
    font-weight: bold;
}
.tool-card .tool-picture {
    height: 200px;
}
.tool-card .tool-descr {
}
.tool-card .tool-tags {
    font-size: 0.9em;
    padding-left: 10px;
    padding-bottom: 10px;
}
.tool-card .tool-link svg {
    /* color: #fff; */
}
.tool-card .tool-link svg:hover {
    color: #22d3ee;
}
.tool-card .tool-tags a {
    color: #fff;
    z-index: 9;
}
.tool-card .tag-link {
    position :relative;
}
.tool-card .tag-link:hover {
    text-decoration: underline;
}
.tool-card .stretched-link:hover {
    text-decoration: none;
}



.hashtag {
    /* color: #f9205a; */
    color: #fff;
    /* font-size: 0.85em; */
    margin-right: 2px;
}

.subtitle {
    color: #eee;
    font-size: 1.2em;
}



.uneedbest {
    color: #f8ba74;
}
.uneedbest:hover {
color: #f8ba74;
}

